--- a/frontend/public/api/projects/property-appraisal.json
+++ b/frontend/public/api/projects/property-appraisal.json
@@ -49,6 +49,15 @@
   "relatedPosts": [
     "fastapi-practices"
   ],
+  "collaboration": {
+    "seeking": false,
+    "types": [],
+    "contact": "/contact"
+  },
+  "service": {
+    "available": false,
+    "description": ""
+  },
   "featured": true,
   "kind": "project"
 }
