Add Semantic Topic Mapper project details and associated media files
- Introduced a new project entry for the Semantic Topic Mapper, detailing its role, description, contributions, and technology stack.
- Added related images and a GitHub link for better project visibility.
- Updated the About page to include new tech logos for MySQL, SQLAlchemy, LangGraph, Vertex AI, Gemini, and vLLM, enhancing the tech stack display.

--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -187,6 +187,49 @@
     },
     "featured": true,
     "kind": "project"
+  },
+  {
+    "id": "semantic-topic-mapper",
+    "title": "Semantic Topic Mapper",
+    "role": "Author & Maintainer",
+    "description": "Python tool that extracts topic hierarchies, cross-references, and entity relationships from complex documents. Enables structured navigation and semantic understanding of document content through intelligent topic extraction and relationship mapping.",
+    "contribution": "Architected and built an end-to-end semantic document analysis system for hierarchical topic extraction.",
+    "contributionBullets": [
+      "Designed semantic analysis pipeline for extracting topic hierarchies from unstructured documents.",
+      "Implemented entity relationship extraction and cross-reference mapping.",
+      "Built hierarchical topic organization system for structured navigation.",
+      "Developed document parsing and semantic understanding components.",
+      "Created APIs for topic extraction, relationship queries, and navigation services."
+    ],
+    "tech": ["Python"],
+    "link": "https://github.com/keerthanvenkata/semantic-topic-mapper",
+    "status": "Active",
+    "images": [
+      "projects/semantic-topic-mapper/infographic.png",
+      "projects/semantic-topic-mapper/arch_diagram.png"
+    ],
+    "video": null,
+    "videoPoster": null,
+    "highlights": [
+      "Extracts meaningful topic hierarchies from complex, unstructured documents.",
+      "Maps entity relationships and cross-references for comprehensive semantic understanding.",
+      "Enables structured navigation through document hierarchies.",
+      "Supports scalable document analysis workflows.",
+      "MIT licensed for open collaboration and extension."
+    ],
+    "relatedProjects": [],
+    "relatedPosts": [],
+    "collaboration": {
+      "seeking": false,
+      "types": [],
+      "contact": "/contact"
+    },
+    "service": {
+      "available": false,
+      "description": ""
+    },
+    "featured": false,
+    "kind": "project"
   }
 ]
 
