--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -110,7 +110,7 @@
       "Similarity score pipeline (0–1) integrated DB → API → UI as an analyst decision signal."
     ],
     "tech": ["Python 3.11", "FastAPI", "PostgreSQL (Azure)", "SQLAlchemy", "Pandas", "Google Gemini 2.5", "React 18", "TypeScript", "Vite", "React Query", "Node.js", "Docker", "OpenAPI"],
-    "status": "Production",
+    "status": "Demo",
     "images": [
       "projects/tax-roll-pipeline/ss1.png",
       "projects/tax-roll-pipeline/ss2.png",
@@ -236,7 +236,7 @@
   {
     "id": "event-flyer-extractor",
     "title": "Event Flyer Extraction System",
-    "role": "Author & Maintainer",
+    "role": "AI & Technical Consultant (BookMyStall.in)",
     "description": "Production-ready AI system that extracts structured event metadata from flyer images using Gemini Vision. Processes JPG/PNG to extract 11 event fields (name, date, venue, organizer, etc.) with validation and human-in-the-loop review. Built as a streamlined, domain-specific adaptation of the Contract Data Extraction Service.",
     "contribution": "Architected and deployed a production-optimized extraction system that adapts proven patterns from enterprise contract extraction into a cost-effective event intelligence platform.",
     "contributionBullets": [
